--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@types/react-dom": "^18",
     "@types/three": "^0.170.0",
     "chromatic": "^11.20.2",
+    "cross-var": "^1.1.0",
+    "dotenv-cli": "^7.4.4",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "eslint-plugin-storybook": "^0.11.1",
