--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@svgr/webpack": "^8.1.0",
     "autoprefixer": "^10.4.20",
     "classnames": "^2.5.1",
-    "next": "15.0.3",
+    "next": "^15.1.6",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "three": "^0.171.0",
