--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "autoprefixer": "^10.4.20",
     "classnames": "^2.5.1",
     "next": "^15.1.6",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "three": "^0.171.0",
     "three-stdlib": "^2.34.0"
   },
