--- a/package.json
+++ b/package.json
@@ -17,21 +17,22 @@
     "autoprefixer": "^10.4.20",
     "classnames": "^2.5.1",
     "next": "^15.1.6",
+    "next-images": "^1.8.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "three": "^0.171.0",
     "three-stdlib": "^2.34.0"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.2",
-    "@storybook/addon-backgrounds": "^8.4.7",
-    "@storybook/addon-essentials": "^8.4.6",
-    "@storybook/addon-interactions": "^8.4.6",
-    "@storybook/addon-onboarding": "^8.4.6",
-    "@storybook/blocks": "^8.4.6",
-    "@storybook/nextjs": "^8.4.6",
-    "@storybook/react": "^8.4.6",
-    "@storybook/test": "^8.4.6",
+    "@chromatic-com/storybook": "^3.2.4",
+    "@storybook/addon-backgrounds": "^8.5.2",
+    "@storybook/addon-essentials": "^8.5.2",
+    "@storybook/addon-interactions": "^8.5.2",
+    "@storybook/addon-onboarding": "^8.5.2",
+    "@storybook/blocks": "^8.5.2",
+    "@storybook/nextjs": "^8.5.2",
+    "@storybook/react": "^8.5.2",
+    "@storybook/test": "^8.5.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -43,7 +44,7 @@
     "eslint-config-next": "15.0.3",
     "eslint-plugin-storybook": "^0.11.1",
     "postcss": "^8.4.49",
-    "storybook": "^8.4.6",
+    "storybook": "^8.5.2",
     "tailwindcss": "^3.4.16",
     "typescript": "^5"
   }
